--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^6.0.5",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.12",
-    "socket.io": "^4.7.2"
+    "nodemon": "^2.0.12"
   },
   "author": "",
   "license": "ISC"
